--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-auth-session": "~3.7.1",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "firebase": "^9.12.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation-stack": "^2.10.4",
-    "twrnc": "^3.4.0"
+    "twrnc": "^3.4.0",
+    "expo-random": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
