--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "expo": "~46.0.16",
     "expo-auth-session": "~3.7.1",
     "expo-google-app-auth": "~8.3.0",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
-    "firebase": "^9.12.1",
+    "firebase": "^8.2.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation-stack": "^2.10.4",
-    "twrnc": "^3.4.0",
-    "expo-random": "~12.3.0"
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
