--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "modal": "^1.2.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-navigation-stack": "^2.10.4",
